   > Dispell: Magic @ L15
   > Group Heal: Magic @ L20
   > Curify: Magic @ L22
   > [P] Clear Mind: Passive @ L23
   > Resurgence: Magic @ L25
  ~ Player 4, 3 skills:
   > Focus Up: Special @ L22
   > [P] Sharp Eye: Passive @ L24
   > [P] Masterful: Passive @ L25
  ~ Equipment, 4 skills:
   > Dark Orb: Tome
   > Soul Shackles: Tome
   > Wyvern's Fury: Weapon, Tome
   > Ice II: Tome
 - 123 new items:
  ~ 19 recovery/buff items:
   > Yellow Salve
   > Blueberry Sizzle
   > Offense Combination
   > Defense Combination
   > Regen Combination
   > Well-Rounded Combination
   > Fine-Tuned Combination
   > Large Potion
   > Large Elixir
   > Large Ether
   > Water Jug
   > Dispel Potion
   > Stimulant
   > Thick-Skinned Herb
   > Vicious Herb
   > Earl's Takeout
   > Medicated Eyedrops
   > Fire Resistance Potion
  ~ 12 foodstuffs:
   > Olive Oil
   > Tomato
   > Dragonfruit
   > Starfruit
   > Processed Oats
   > Mana Fritters
   > Seafood Dinner
   > Fancy Stew
   > Carrot Seeds
   > Wheat Seeds
   > Oat Seeds
   > Tomato Seeds
  ~ 41 materials:
   > Plant Essence
   > Metal Essence
   > Coal
   > Fiery Powder
   > Malicious Essence
   > Shadowspec Ingot
   > Blank Tome
   > Feral Bat Wing
   > Turtle Scute
   > Medicinal Herb
   > Medicinal Root
   > Raw Truffle
   > Web Ball
   > Tarantula Silk
   > Vial of Poison
   > Petrified Wood
   > Dragon Scale
   > Enchanted Dragon Scale
   > Forest Core
   > Wind Catalyst
   > Icy Gel
   > Ice Cube
   > Frozen Jewel
   > Frozen Core
   > Gazer Goop
   > Stinger
   > Feral Rat Fur
   > Ectoblood
   > Ectoplasm
   > Fiery Blood
   > Rotten Flesh
   > Tellurium Dust
   > Tellurium Alloy
   > Tellurium Core
   > Life Crystal
   > Mana Crystal
   > Mysterious Yellow Badge
   > Knight Token
   > Mage Token
   > Cleric Token
   > Rogue Token
  ~ 13 upgraders:
   > ATK Scroll ★
   > MAT Scroll ★
   > DEF Scroll ★
   > MDF Scroll ★
   > EVA Scroll
   > PDR Scroll
   > MDR Scroll
   > GRD Scroll
   > HRG Scroll
   > MRG Scroll