@@ -4066,7 +4066,7 @@
   {
     "id": 137,
     "animationId": 0,
-    "consumable": true,
+    "consumable": false,
     "damage": {
       "critical": false,
       "elementId": 0,
@@ -4074,17 +4074,17 @@
       "type": 0,
       "variance": 20
     },
-    "description": "",
+    "description": "A prized possession \\N[2] brought along with him.\nHe's a self-proclaimed master at wielding this tool.",
     "effects": [],
     "hitType": 0,
-    "iconIndex": 0,
-    "itypeId": 1,
-    "name": "",
+    "iconIndex": 1299,
+    "itypeId": 2,
+    "name": "Cooking Pan",
     "note": "Was once the Cooked Fish.",
-    "occasion": 0,
+    "occasion": 3,
     "price": 0,
     "repeats": 1,
-    "scope": 7,
+    "scope": 0,
     "speed": 0,
     "successRate": 100,
     "tpGain": 0
