@@ -49,7 +49,7 @@ Additions:
    > Soul Shackles: Tome
    > Wyvern's Fury: Weapon, Tome
    > Ice II: Tome
- - 123 new items:
+ - 124 new items:
   ~ 19 recovery/buff items:
    > Yellow Salve
    > Blueberry Sizzle
@@ -147,8 +147,9 @@ Additions:
    > Whiskerfish
    > Northern Redbelly Dace
    > Blue Crab
-  ~ 31 miscellaneous items:
+  ~ 32 miscellaneous items:
    > Holy Water
+   > Cooking Pan
    > Pumpkin
    > Map of Telluria
    > Phantasmal Charm
